Changed: Note and outro timing

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 
 		<!-- Intro -->
 		<div id="introArea" class="fullScreen">
+
+			<!-- Language selection -->
 			<div id="languageBox" class="hidden">
 				<button id="languageEN" type="button" disabled>English</button>
 				<button id="languageCS" type="button">Česky</button>
@@ -76,19 +78,18 @@
 			</div>
 
 			<div id="introBox">
+
+				<!-- Announcement -->
 				<div id="title">
 					<h2 id="locIntroTitle1">Vera and Karel's</h2>
 					<h1 id="locIntroTitle2">DAUGHTER</h1>
 					<h2 id="locIntroTitle3"></h2>
 					<h2 id="locIntroTitle4">was born on June XXth 2024</h2>
 				</div>
+
 				<div>
-					<!-- <p id="locIntroGame">To find out her name, please play<br />a little game we designed for her.</p> -->
-
+					<!-- Button -->
 					<div id="play" class="hidden">
-						<!-- <p><em id="locIntroSound">(with the sound on)</em></p> -->
-
-						<!-- Button -->
 						<button id="playButton" type="button" autofocus disabled>
 						
 							<span id="playSymbol">
@@ -121,14 +122,14 @@
 
 		<!-- Outro -->
 		<div class="fullScreen ignoreCursor">
-			<div id="outroNote" class="hidden noteText">Welcome to this world,</div>
-			<div id="outroName" class="hidden">NAME</div>
+			<div id="outroNote" class="hidden noteText"></div>
+			<div id="outroName" class="hidden"></div>
 		</div>
 
 		<!-- Thank you note -->
 		<div id="creditsArea" class="hidden">
-			<div id="thanks" class="noteText">Thank you for playing!</div>
-			<div id="credits">Game by <a href="https://www.instagram.com/dododollydo/">Mom</a> and <a href="http://moricky.com">Dad</a>, art by <a href="https://www.behance.net/mikovecjir5bc4">Jirka</a>, audio by <a href="#">TBD</a>, testing by <a href="https://twitter.com/YorisYan">Joris</a>, <a href="https://www.instagram.com/katacik/">Katka</a>, and <a href="https://twitter.com/maruksp">Marek</a></div>
+			<div id="thanks" class="noteText"></div>
+			<div id="credits"></div>
 		</div>
 
 		<!-- Dev tools -->
