Changed: Big sound files changed from WAV to OGG

--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@
 
 		<!-- Audio -->
 		<div id="audio">
-			<audio id="audioPlay"			preload="auto" src="./audio/play.wav" noScriptPreload="1"></audio>
+			<audio id="audioPlay"			preload="auto" src="./audio/play.ogg" noScriptPreload="1"></audio>
 			<!-- <audio id="audioTileDragStart"	preload="auto" src="./audio/tileDragStart.wav"></audio>
 			<audio id="audioTileDragEnd"	preload="auto" src="./audio/tileDragEnd.wav"></audio> -->
 			<audio id="audioTileSnapStart"	preload="auto" src="./audio/tileSnapStart.wav"></audio>
 			<audio id="audioTileSnapEnd"	preload="auto" src="./audio/tileSnapEnd.wav"></audio>
-			<audio id="audioNoteStart"		preload="auto" src="./audio/noteStart.wav"></audio>
+			<audio id="audioNoteStart"		preload="auto" src="./audio/noteStart.ogg"></audio>
 			<audio id="audioNoteEnd"		preload="auto" src="./audio/noteEnd.wav"></audio>
 			<audio id="audioOutroStart"		preload="auto" src="./audio/outroStart.wav"></audio>
-			<audio id="audioOutroName"		preload="auto" src="./audio/outroName.wav"></audio>
+			<audio id="audioOutroName"		preload="auto" src="./audio/outroName.ogg"></audio>
 			<audio id="audioOutroEnd"		preload="auto" src="./audio/outroEnd.wav"></audio>
 		</div>
 
