Added: Option to set timeline entry for sound end

--- a/index.html
+++ b/index.html
@@ -146,22 +146,21 @@
 			<audio id="audioTileSnapEnd"	preload="auto" src="./audio/tileSnapEnd.wav"></audio>
 			<!-- <audio id="audioNoteStart"		preload="auto" src="./audio/noteStart.ogg"></audio> -->
 			<audio id="audioNoteEnd"		preload="auto" src="./audio/noteEnd.wav"></audio>
-			<audio id="audioOutroStart"		preload="auto" src="./audio/outroStart.wav"></audio>
+			<audio id="audioOutroStart"		preload="auto" src="./audio/outroStart.ogg"></audio>
 			<audio id="audioOutroName"		preload="auto" src="./audio/outroName.ogg"></audio>
 			<audio id="audioOutroEnd"		preload="auto" src="./audio/outroEnd.wav"></audio>
 
-			<audio id="music_tile02"		preload="auto" src="./audio/music/tile02.ogg"></audio>
-			<audio id="music_tile03"		preload="auto" src="./audio/music/tile03.ogg"></audio>
-			<audio id="music_tile04"		preload="auto" src="./audio/music/tile04.ogg"></audio>
-			<audio id="music_tile05"		preload="auto" src="./audio/music/tile05.ogg"></audio>
-			<audio id="music_tile06"		preload="auto" src="./audio/music/tile06.ogg"></audio>
-			<audio id="music_tile07"		preload="auto" src="./audio/music/tile07.ogg"></audio>
-			<audio id="music_tile08"		preload="auto" src="./audio/music/tile08.ogg"></audio>
-			<audio id="music_tile09"		preload="auto" src="./audio/music/tile09.ogg"></audio>
-			<audio id="music_tile10"		preload="auto" src="./audio/music/tile10.ogg"></audio>
-			<audio id="music_tile11"		preload="auto" src="./audio/music/tile11.ogg"></audio>
-			<audio id="music_tile12"		preload="auto" src="./audio/music/tile12.ogg"></audio>
-			<audio id="musicOutroStart"		preload="auto" src="./audio/music/outroStart.ogg"></audio>
+			<audio id="music_tile02"		preload="auto" src="./audio/tile02.ogg"></audio>
+			<audio id="music_tile03"		preload="auto" src="./audio/tile03.ogg"></audio>
+			<audio id="music_tile04"		preload="auto" src="./audio/tile04.ogg"></audio>
+			<audio id="music_tile05"		preload="auto" src="./audio/tile05.ogg"></audio>
+			<audio id="music_tile06"		preload="auto" src="./audio/tile06.ogg"></audio>
+			<audio id="music_tile07"		preload="auto" src="./audio/tile07.ogg"></audio>
+			<audio id="music_tile08"		preload="auto" src="./audio/tile08.ogg"></audio>
+			<audio id="music_tile09"		preload="auto" src="./audio/tile09.ogg"></audio>
+			<audio id="music_tile10"		preload="auto" src="./audio/tile10.ogg"></audio>
+			<audio id="music_tile11"		preload="auto" src="./audio/tile11.ogg"></audio>
+			<audio id="music_tile12"		preload="auto" src="./audio/tile12.ogg"></audio>
 		</div>
 
 		<!-- Scripts -->
