--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 					<h1 id="locIntroTitle2">DAUGHTER</h1>
 					<h2 id="locIntroTitle3"></h2>
 					<h2 id="locIntroTitle4">was born on June XXth 2024</h2>
+					<h2 id="locIntroTitle5">in Haarlem, The Netherlands</h2>
 				</div>
 
 				<div>
