Changed: New images
Fixed: Note continue arrow symbol was not shown on mobile.
Fixed: Timing of play button enabling.

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 				</div>
 
 				<div>
+
 					<!-- Button -->
 					<div id="play" class="hidden">
 						<button id="playButton" type="button" autofocus disabled>
@@ -118,7 +119,7 @@
 		<!-- Note -->
 		<div id="noteArea">
 			<div id="note" class="noteText hidden ignoreCursor"></div>
-			<div id="noteContinue" class="hidden">🡒</div>
+			<div id="noteContinue" class="hidden">»</div>
 		</div>
 
 		<!-- Outro -->
