Fixed: OGG sounds were not playing on iOS, replaced by MP3

--- a/index.html
+++ b/index.html
@@ -141,28 +141,28 @@
 
 		<!-- Audio -->
 		<div id="audio">
-			<audio id="audioPlay"			preload="auto" src="./audio/play.ogg" noScriptPreload="1"></audio>
+			<audio id="audioPlay"			preload="auto" src="./audio/play.mp3" noScriptPreload="1"></audio>
 			<!-- <audio id="audioTileDragStart"	preload="auto" src="./audio/tileDragStart.wav"></audio>
 			<audio id="audioTileDragEnd"	preload="auto" src="./audio/tileDragEnd.wav"></audio> -->
 			<audio id="audioTileSnapStart"	preload="auto" src="./audio/tileSnapStart.wav"></audio>
 			<audio id="audioTileSnapEnd"	preload="auto" src="./audio/tileSnapEnd.wav"></audio>
 			<!-- <audio id="audioNoteStart"		preload="auto" src="./audio/noteStart.ogg"></audio> -->
 			<audio id="audioNoteEnd"		preload="auto" src="./audio/noteEnd.wav"></audio>
-			<audio id="audioOutroStart"		preload="auto" src="./audio/outroStart.ogg"></audio>
-			<audio id="audioOutroName"		preload="auto" src="./audio/outroName.ogg"></audio>
+			<audio id="audioOutroStart"		preload="auto" src="./audio/outroStart.mp3"></audio>
+			<audio id="audioOutroName"		preload="auto" src="./audio/outroName.mp3"></audio>
 			<audio id="audioOutroEnd"		preload="auto" src="./audio/outroEnd.wav"></audio>
 
-			<audio id="music_tile02"		preload="auto" src="./audio/tile02.ogg"></audio>
-			<audio id="music_tile03"		preload="auto" src="./audio/tile03.ogg"></audio>
-			<audio id="music_tile04"		preload="auto" src="./audio/tile04.ogg"></audio>
-			<audio id="music_tile05"		preload="auto" src="./audio/tile05.ogg"></audio>
-			<audio id="music_tile06"		preload="auto" src="./audio/tile06.ogg"></audio>
-			<audio id="music_tile07"		preload="auto" src="./audio/tile07.ogg"></audio>
-			<audio id="music_tile08"		preload="auto" src="./audio/tile08.ogg"></audio>
-			<audio id="music_tile09"		preload="auto" src="./audio/tile09.ogg"></audio>
-			<audio id="music_tile10"		preload="auto" src="./audio/tile10.ogg"></audio>
-			<audio id="music_tile11"		preload="auto" src="./audio/tile11.ogg"></audio>
-			<audio id="music_tile12"		preload="auto" src="./audio/tile12.ogg"></audio>
+			<audio id="music_tile02"		preload="auto" src="./audio/tile02.mp3"></audio>
+			<audio id="music_tile03"		preload="auto" src="./audio/tile03.mp3"></audio>
+			<audio id="music_tile04"		preload="auto" src="./audio/tile04.mp3"></audio>
+			<audio id="music_tile05"		preload="auto" src="./audio/tile05.mp3"></audio>
+			<audio id="music_tile06"		preload="auto" src="./audio/tile06.mp3"></audio>
+			<audio id="music_tile07"		preload="auto" src="./audio/tile07.mp3"></audio>
+			<audio id="music_tile08"		preload="auto" src="./audio/tile08.mp3"></audio>
+			<audio id="music_tile09"		preload="auto" src="./audio/tile09.mp3"></audio>
+			<audio id="music_tile10"		preload="auto" src="./audio/tile10.mp3"></audio>
+			<audio id="music_tile11"		preload="auto" src="./audio/tile11.mp3"></audio>
+			<audio id="music_tile12"		preload="auto" src="./audio/tile12.mp3"></audio>
 		</div>
 
 		<!-- Scripts -->
