Added: Open Graph site name

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<!-- Social sharing preview -->
 		<meta property="og:title" content="Vera & Karel Had a Girl!">
 		<meta property="og:description" content="Play a game we prepared for her and find out her name.">
+		<meta property="og:site_name" content="Moricky.com"/>
 		<meta property="og:url" content="http://baby.moricky.com/game2024/main">
 		<meta property="og:locale" content="en_US">
 		<meta property="og:type" content="website">
