--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 		<div id="creditsArea" class="hidden">
 			<div id="thanks" class="noteText"></div>
 			<div id="credits"></div>
+			<div id="anotherGame"><a href="http://baby.moricky.com" id="locGameSelection"></a></div>
 		</div>
 
 		<!-- Dev tools -->
