Added: Outro song 🥰

--- a/index.html
+++ b/index.html
@@ -120,13 +120,14 @@
 		<!-- Note -->
 		<div id="noteArea">
 			<div id="note" class="noteText hidden ignoreCursor"></div>
-			<div id="noteContinue" class="hidden">»</div>
+			<div id="noteContinue" class="continueButton hidden">»</div>
 		</div>
 
 		<!-- Outro -->
 		<div class="fullScreen ignoreCursor">
 			<div id="outroNote" class="hidden noteText"></div>
 			<div id="outroName" class="hidden"></div>
+			<div id="outroContinue" class="continueButton hidden">»</div>
 		</div>
 
 		<!-- Thank you note -->
@@ -152,7 +153,7 @@
 			<audio id="audioNoteEnd"		preload="auto" src="./audio/noteEnd.wav"></audio>
 			<audio id="audioOutroStart"		preload="auto" src="./audio/outroStart.mp3"></audio>
 			<audio id="audioOutroName"		preload="auto" src="./audio/outroName.mp3"></audio>
-			<audio id="audioOutroEnd"		preload="auto" src="./audio/outroEnd.wav"></audio>
+			<!-- <audio id="audioOutroEnd"		preload="auto" src="./audio/outroEnd.wav"></audio> -->
 
 			<audio id="music_tile02"		preload="auto" src="./audio/tile02.mp3"></audio>
 			<audio id="music_tile03"		preload="auto" src="./audio/tile03.mp3"></audio>
