--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 		<script src="./scripts/game.js"></script>
 		<script src="./scripts/camera.js"></script>
 		<script src="./scripts/tile.js"></script>
+		<script src="./scripts/tutorial.js"></script>
 		<script src="./scripts/note.js"></script>
 		<script src="./scripts/intro.js"></script>
 		<script src="./scripts/outro.js"></script>
