Added: More Russian texts.

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
 						<p id="noScript">
 							The game requires JavaScript. Follow <a href="https://www.enablejavascript.io" target="_blank">this guide</a> to enable it in your browser.
 							<br /><br />
-							Hra vyžaduje JavaScript. Zapnout ho můžete pomocí <a href="https://www.enablejavascript.io" target="_blank">tohoto návodu</a>.
+							Hra vyžaduje JavaScript. Zapnout ho můžete pomocí <a href="https://www.enablejavascript.io/cz" target="_blank">tohoto návodu</a>.
+							<br /><br />
+							В игре используется JavaScript. Следуйте <a href="https://www.enablejavascript.io/ru" target="_blank">этой инструкции</a>, чтобы включить его поддержку в браузере.
 						</p>
 					</noscript>
 				</div>
