Removed: Dev links and disclaimers

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<meta property="og:title" content="Vera & Karel Had a Girl!">
 		<meta property="og:description" content="Play a game we prepared for her and find out her name.">
 		<meta property="og:site_name" content="Moricky.com"/>
-		<meta property="og:url" content="http://baby.moricky.com/game2024/main">
+		<meta property="og:url" content="http://baby.moricky.com/2024">
 		<meta property="og:locale" content="en_US">
 		<meta property="og:type" content="website">
-		<meta property="og:image" content="http://baby.moricky.com/game2024/main/images/og_image.jpg">
+		<meta property="og:image" content="http://baby.moricky.com/2024/images/og_image.jpg">
 		<meta property="og:image:width" content="1200">
 		<meta property="og:image:height" content="630">
 
@@ -27,8 +27,8 @@
 		<meta name="twitter:title" content="Vera & Karel Had a Girl!">
 		<meta name="twitter:description" content="Play a game we prepared for her and find out her name.">
 		<meta name="twitter:creator" content="@karelmoricky">
-		<meta name="twitter:url" content="http://baby.moricky.com/game2024/main">
-		<meta name="twitter:image" content="http://baby.moricky.com/game2024/main/images/og_image.jpg">
+		<meta name="twitter:url" content="http://baby.moricky.com/2024">
+		<meta name="twitter:image" content="http://baby.moricky.com/2024/images/og_image.jpg">
 
 		<!-- Robots -->
 		<!-- <meta name="robots" content="index,follow"> -->
@@ -140,9 +140,11 @@
 		</div>
 
 		<!-- Dev tools -->
-		<div id="log" class="ignoreCursor"></div>
-		<div id="pos" class="ignoreCursor"></div>
-		<div id="disclaimer">WORK IN PROGRESS! DO NOT SHARE!</div>
+		<div class="hidden">
+			<div id="log" class="ignoreCursor"></div>
+			<div id="pos" class="ignoreCursor"></div>
+			<div id="disclaimer">WORK IN PROGRESS! DO NOT SHARE!</div>
+		</div>
 
 		<!-- Audio -->
 		<div id="audio">
