Changed: Current date shows as the birth date (for now)

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 		<div id="creditsArea" class="hidden">
 			<div id="thanks" class="noteText"></div>
 			<div id="credits"></div>
-			<div id="anotherGame"><a href="http://baby.moricky.com" id="locGameSelection"></a></div>
+			<div id="anotherGame"><a href="http://baby.moricky.com" id="locGameSelection" target="_blank"></a></div>
 		</div>
 
 		<!-- Dev tools -->
